improve build script and mod loading above 1.7.10