@@ -1,15 +1,14 @@
-package com.idkidknow.mcreallink.forge1165;
-
-import com.google.common.io.ByteStreams;
+package com.idkidknow.mcreallink.forge1182;
 
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Enumeration;
+import java.util.List;
 import java.util.function.Function;
 
 public class ModLoad {
@@ -20,11 +19,11 @@ public class ModLoad {
     ) {
         String coreClasspathStr;
         try {
-            coreClasspathStr = new String(Files.readAllBytes(Paths.get(coreClasspathFile)));
+            coreClasspathStr = Files.readString(Path.of(coreClasspathFile));
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        URL[] coreClasspath = Arrays.stream(coreClasspathStr.split("\n"))
+        List<URL> coreClasspath = Arrays.stream(coreClasspathStr.split("\n"))
                 .map(str -> {
                     try {
                         return Paths.get(str).toUri().toURL();
@@ -32,8 +31,8 @@ public class ModLoad {
                         throw new RuntimeException(e);
                     }
                 })
-                .toArray(URL[]::new);
-        return new URLClassLoader(coreClasspath, null) {
+                .toList();
+        return new URLClassLoader(coreClasspath.toArray(new URL[0]), null) {
             @Override
             protected Class<?> findClass(String name) throws ClassNotFoundException {
                 if (useMine.apply(name)) {
@@ -49,7 +48,7 @@ public class ModLoad {
 
             @Override
             public URL findResource(String name) {
-                URL url = mcClassLoader.getResource(name);
+                var url = mcClassLoader.getResource(name);
                 if (url != null) return url;
                 return super.findResource(name);
             }
@@ -74,12 +73,11 @@ public class ModLoad {
         return new ClassLoader(null) {
             private Class<?> findInnerClass(String name) throws ClassNotFoundException {
                 String path = "META-INF/reallink-mod-core/" + name.replace('.', '/') + ".class";
-                try (InputStream in = mcClassLoader.getResourceAsStream(path)) {
+                try (var in = mcClassLoader.getResourceAsStream(path)) {
                     if (in == null) {
                         throw new ClassNotFoundException(name);
                     }
-                    //noinspection UnstableApiUsage
-                    byte[] bytes = ByteStreams.toByteArray(in);
+                    byte[] bytes = in.readAllBytes();
                     return defineClass(name, bytes, 0, bytes.length);
                 } catch (Exception e) {
                     throw new ClassNotFoundException(name, e);
@@ -101,7 +99,7 @@ public class ModLoad {
 
             @Override
             protected URL findResource(String name) {
-                URL url = mcClassLoader.getResource(name);
+                var url = mcClassLoader.getResource(name);
                 if (url != null) return url;
                 return mcClassLoader.getResource("META-INF/reallink-mod-core/" + name);
             }
